installdir = $(pkglibdir)/python/Components/Renderer

install_PYTHON = \
	__init__.py Label.py Progress.py Listbox.py Renderer.py Pixmap.py \
	FixedLabel.py PositionGauge.py Canvas.py LcdPicon.py Picon.py Pig.py \
	FrontpanelLed.py ChannelNumber.py VideoSize.py NextEpgInfo.py \
	RollerCharLCD.py RollerCharLCDLong.py CiModuleControl.py EtAnalogClockLCD.py \
	RunningTextSpa.py
