installdir = $(pkglibdir)/python/Plugins/SystemPlugins/Videomode

SUBDIRS = meta

install_PYTHON =	\
	__init__.py \
	plugin.py \
	VideoHardware.py


dist_install_DATA = \
	DVI.png \
	HDMI.png \
	lcd_DVI.png \
	lcd_HDMI.png \
	lcd_Scart.png \
	lcd_YPbPr.png \
	Scart.png \
	Scart-YPbPr.png \
	videowizard.xml \
	YPbPr.png \
	RCA.png 
